k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tier3
  labels:
    app.kubernetes.io/part-of: tier3
    pod-security.kubernetes.io/enforce: baseline
